--- a/assets/css/theme-tokens.css
+++ b/assets/css/theme-tokens.css
@@ -23,6 +23,7 @@
 
   /* Couleur primaire */
   --primary: var(--color-raspberry-500);
+  --primary-light: var(--color-raspberry-300); /* Added for graph */
   --on-primary: var(--color-white);
 
   /* Couleur d'accent */
