--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,7 @@ body {
 
 /* Tableaux */
 table {
+  --table-layout: auto;
   --table-border-color: transparent;
   --table-border-collapse: separate;
   --table-border-spacing: var(--spacing-4);
@@ -89,6 +90,7 @@ table {
   & th:nth-of-type(1),
   & td:nth-of-type(1) {
     width: 10rem;
+    min-width: 10rem;
   }
 
   & th:nth-of-type(2),
@@ -98,7 +100,7 @@ table {
 
   & th:nth-of-type(3),
   & td:nth-of-type(3) {
-    width: auto;
+    width: 50%;
     min-width: 300px;
   }
 
